# tidyCSV.py

./: .gitignore  LICENSE  README.md  manual_test.py  pyproject.toml
.github/workflows/: linting.yml  main.yml  mypy.yml  publish.yml  tests.yml
tests/: conftest.py  test_parsing.py  test_tidycsv.py
tidycsv/: __init__.py  interface.py
tidycsv/core/: parsing.py
tidycsv/utils/: customobjs.py
