[tool.poetry]
name = "tidycsv"
version = "0.1.0"
description = ""
authors = ["Gustavo Magaña López <gmaganna.biomed@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.8.2"
black = "^21.5b0"
ipython = "^7.23.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
